--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -31,6 +31,7 @@
 	padding-top: 55px;
 	height: 360px;
 	position: relative;
+	display: block;
 }
 
 .about-viewer__image{
@@ -47,7 +48,6 @@
 	left: 25.6%;
 	z-index: 2;
 	width: 47.5%;
-	height: 340px;
 	background: #c1c7c8;
 }
 
@@ -84,12 +84,7 @@
 .about-viewer__screen{
 	border-radius: 6px;
     overflow: hidden;
-    height: 210px;
     vertical-align: middle;
-}
-
-.about-viewer__screen_center{
-	height: 310px;
 }
 
 .about-viewer__screen-refer{
@@ -102,6 +97,9 @@
 	border: none;
 }
 
+.about-stack{
+	display: block;
+}
 .about-stack__choise{
 	display: inline-block;
 }
@@ -243,4 +241,50 @@
 	font-weight: 600;
 	color: #777;
 	margin-top: 7px;
+}
+
+
+@media only screen and (max-width:480px) {
+	.about{
+		margin-top: 30px;	
+		background: url(../img/bgtwice.jpg) repeat-x, 
+	linear-gradient(to bottom, #ececec 200px, #f3f3f3 200px);
+	}
+	.about-text{
+		margin-bottom: 35px;
+	}
+	.about-text__title{
+		font-size: 22px;
+		margin-bottom: 15px;
+	}
+	.about-viewer{
+		padding-top: 0px;
+		height: 280px;
+	}
+	.about-viewer__image_right, .about-viewer__image_left{
+		display: none;
+	}
+
+	.about-viewer__image_center{
+		width: 95%;
+		left: 0;
+	}
+
+	.about-stack__choise-title{
+		font-size: 14px;
+		margin-bottom: 20px;
+	}
+
+	.about-stack__opinion {
+		width: 100%;
+		margin-top: 20px;
+		margin-left: 0px;
+		float: none;
+	}
+
+	.about-stack__statistics{
+		display: none;
+	}
+
+
 }
