--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -20,3 +20,28 @@ body{
     display: block;
     clear:both;
 }
+
+@media screen and (max-width: 480px){
+*{
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Open Sans', sans-serif;
+}
+
+body{
+	box-sizing: border-box;
+	background-color: #f3f3f3;
+	width: 320px;
+	margin: 0 auto;
+}
+
+.container{
+	margin: 0 auto;
+	width: 300px;
+}
+.clearfix::after{
+    content: '';
+    display: block;
+    clear:both;
+}	
+}
