--- a/stylesheets/slideshow.css
+++ b/stylesheets/slideshow.css
@@ -5,46 +5,36 @@
 
 .slideshow__headline{
 	position: absolute;
-	z-index: 2;
 	color: #fff;
-	text-transform: uppercase;
-	background: #e8645a;
-	border-radius: 5px;
-	height: 10%;
-	width: 345px;
-	top:30%;
+	z-index: 2;
+	font-size: 48px;
+	top: 30.5%;
 	left: 38.5%;
-	text-align: center;
-}
-
-.slideshow__headline-text{
-	font-size: 47px;
 	font-weight: 800;
-	margin-top: -10px;
-	letter-spacing: 0.9px;
+	letter-spacing: 2.3px;
+	border-radius: 5px;
+	background: #e8645a;
+	text-transform: uppercase;
+	padding: 0px 6px 10px;
+	line-height: 0.9;
 }
 
 .slideshow__paragraph{
-	position: absolute;
-	background:#3f4646;
-	color: #fff;
-	height: 13%;
-	width: 470px;
-	border-radius: 5px;
-	z-index: 2;
-	top: 41.2%;
-	left: 34.5%;	
-	text-align: center;
-	line-height: 27px;
-	font-weight: 100;
-	padding-top: 6px;
-}
-
-.slideshow__paragraph-text{
 	font-size: 16px;
 	letter-spacing: 0.7;
 	margin: 0 5px;
-	
+	z-index: 2;	
+	position: absolute;
+	color: #fff;
+	top: 41.5%;
+	left: 34%;
+	background-color: #3f4646;
+	text-align: center;
+	border-radius: 5px;
+	line-height: 27px;
+	font-weight: 100;
+	padding: 10px 25px;
+	letter-spacing: 1px;
 }
 
 
@@ -111,4 +101,40 @@
 @keyframes slideshow__slides_fade {
 	from {opacity: .4} 
 	to {opacity: 1}
+}
+
+@media only screen and (max-width:480px) {
+.slideshow__headline{
+	font-size: 20px;
+	font-weight: 800;
+	top: 20%;
+	left: 25.5%;
+	letter-spacing: 1.8px;
+	padding: 3px 5px 5px;
+	border-radius: 3px;
+}
+.slideshow__paragraph{
+	display: block;
+	border-radius: 3px;
+	font-size: 12px;
+	height: auto;
+	width: 55%;
+	top: 65px;
+	left: 13.5%;	
+	padding: 5px 25px; 
+	line-height: 1;
+	border-radius: 3px;
+	opacity: 0.9;
+}
+.slideshow__slides-image{
+	width: 100%;
+	height: 150px;
+}
+
+.slideshow__button-pref, .slideshow__button-next {
+	display: none;
+}
+.slideshow__radiobutton-point{
+	display: none;
+}
 }
